# tcm-cpi-fusion

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_windows.bat
docs/: ARCHITECTURE.md  DATA_SOURCES.md  WINDOWS_SETUP.md
experiments/configs/: baseline.yaml  default.yaml
notebooks/: colab_setup.py
notebooks/01_data_exploration/: 01_tcmsp_eda.ipynb  02_bindingdb_eda.ipynb
notebooks/02_baseline/: 03_baseline_rf.ipynb
notebooks/03_model_training/: 04_dual_stream_colab.ipynb
notebooks/04_analysis/: 05_results_analysis.ipynb  06_gradcam_atoms.ipynb  07_docking_validation.ipynb
scripts/: 01_download_data.py  02_build_dataset.py  03_precompute_embeddings.py  04_run_baseline.py  05_train_model.py
src/data/: __init__.py  bindingdb_parser.py  dataset.py  download.py  tcmsp_parser.py
src/docking/: __init__.py  pdb_fetcher.py  vina_runner.py
src/evaluation/: __init__.py  explainability.py  metrics.py
src/features/: __init__.py  fingerprints.py  mol_graph.py  protein_embed.py
src/models/: __init__.py  baseline.py  components.py  dual_stream.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  io.py  pubchem.py  uniprot.py
tests/: test_baseline.py  test_fingerprints.py  test_metrics.py  test_mol_graph.py
