[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tcm-cpi-fusion"
version = "0.1.0"
description = "Dual-stream ChemBERTa + GCN for TCM compound-target interaction prediction"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
